src/test/deca/syntax/invalid/HelloWorld/DoubleComment-OCO.deca
// Description:
//    tests de commentaire avec sous-commentaire lexicalement incorrect.
//
// Resultats:
//    test_lex donne une erreur sur le second '*/' ligne 10.
//    test_synt donne une erreur à travers test_lex.
// Historique:
//    cree le 05/01/2022

/* foo */ "bar" */
